# cicada

./: .gitignore  CONTRIBUTING.md  Cicada.psd1  Cicada.psm1  INSTALL.md  Install-Cicada.ps1  Invoke-Cicada.ps1  README.md  SECURITY.md  Start-Agent.ps1  USAGE.md  Watch-Sessions.ps1  pyproject.toml  roles.json
.github/: copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
cicada_mcp/: __main__.py  db.py  server.py
tests/: CicadaFunFacts.Tests.ps1
