[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cicada-mcp"
version = "0.1.2"
description = "MCP server for multi-agent team coordination"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Lewis Wigmore"}]
dependencies = ["mcp>=1.27.0"]

[project.scripts]
cicada-mcp = "cicada_mcp.__main__:main"

[project.urls]
Homepage = "https://github.com/lewiswigmore/cicada"

[tool.setuptools.packages.find]
include = ["cicada_mcp*"]
